# mapreduce-lite

./: BuildMapReduceLite.md  CMakeLists.txt  ProjectHome.md
src/base/: class_register_test.cc  class_register_test_helper.cc  cvector_test.cc  logging.cc  stl-util_test.cc  varint32.cc
src/hash/: simple_hash.cc  simple_hash.h
src/mapreduce_lite/: epoller.cc  flags.cc  flags.h  mapreduce_lite.cc  mapreduce_lite.h  mapreduce_main.cc  protofile.cc  protofile_test.cc  signaling_queue.cc  signaling_queue.h  socket_communicator.cc  socket_communicator.h  socket_communicator_test.cc  tcp_socket.cc  tcp_socket_test.cc  utils.h
src/mapreduce_lite/demo/: CMakeLists.txt  wordcount.cc
src/sorted_buffer/: memory_allocator.cc  memory_allocator.h  memory_allocator_test.cc  memory_piece.cc  memory_piece_io_test.cc  sorted_buffer.cc  sorted_buffer_iterator.cc  sorted_buffer_iterator_test.cc  sorted_buffer_regression_test.cc  sorted_buffer_test.cc
src/strutil/: join_strings_test.cc  split_string_test.cc  strcodec_test.cc  stringprintf.cc  stringprintf_test.cc
src/system/: condition_variable.h  condition_variable_test.cc  filepattern.cc  filepattern_test.cc  mutex.h  mutex_test.cc
trunk/: CMakeLists.txt
trunk/src/base/: class_register_test.cc  class_register_test_helper.cc  class_register_test_helper.h  common.h  cvector.h  logging.cc  random.cc  random.h  stl-util_test.cc  stream_wrapper.cc  varint32.cc  varint32.h  varint32_test.cc
trunk/src/hash/: md5_hash.cc  md5_hash.h  md5_hash_test.cc
trunk/src/mapreduce_lite/: CMakeLists.txt  communicator.h  epoller.cc  epoller.h  flags.cc  mapreduce_lite.cc  protofile.cc  protofile_test.cc  reader.cc  reader.h  reader_test.cc  registerer_test.cc  signaling_queue.cc  signaling_queue_test.cc  socket_communicator.cc  socket_communicator.h  socket_communicator_test.cc  tcp_socket.cc  tcp_socket.h  tcp_socket_test.cc  utils_test.cc
trunk/src/mapreduce_lite/demo/: mrl-wordcount  wordcount.cc
trunk/src/sorted_buffer/: memory_piece.cc  memory_piece.h  memory_piece_io_test.cc  memory_piece_less_than_test.cc  memory_piece_test.cc  sorted_buffer.h  sorted_buffer_iterator.h  sorted_buffer_iterator_test.cc  sorted_buffer_regression_test.cc  sorted_buffer_test.cc
trunk/src/strutil/: split_string.cc  split_string_test.cc  strcodec.cc  strcodec.h  stringprintf_test.cc
trunk/src/system/: condition_variable.cc  condition_variable_test.cc  filepattern.cc  filepattern_test.cc  mutex.h  mutex_test.cc  scoped_locker.h
wiki/: BuildMapReduceLite.wiki  HowtoBuildOnLinux.wiki  PageName.wiki
